--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -4,13 +4,14 @@
   border: 1px solid rgba(128, 128, 128, 0.356);
   cursor: pointer;
   transition: all 0.3s linear;
+  width: fit-content;
 }
 .item:hover {
   box-shadow: rgba(128, 128, 128, 0.356) 0px 1px 2px 0px,
     rgba(128, 128, 128, 0.356) 0px 2px 6px 2px;
 }
 .item img {
-  width: 220px;
+  width: 170px;
   height: 220px;
   object-fit: cover;
   border-radius: 5px;
