--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -3,8 +3,10 @@
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding: 20px 0;
+  justify-content: space-between;
+  padding: 20px 20px;
+  max-width: 1200px;
+  margin: auto;
 }
 .navbar ul {
   list-style: none;
